--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body onload="createCaptcha()">
-    <h1>You're damn right!</h1>
+    <h1>Ты чертовски прав! Давай ещё раз</h1>
     <form onsubmit="validateCaptcha()">
       <div id="captcha">
       </div>
