--- a/index3.html
+++ b/index3.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body onload="createCaptcha()">
-    <h1>И крайняя каптчаююю</h1>
+    <h1>И крайняя каптча...</h1>
     <form onsubmit="validateCaptcha()">
       <div id="captcha">
       </div>
