--- a/index2.html
+++ b/index2.html
@@ -14,6 +14,7 @@
       <input type="text" placeholder="Captcha" id="cpatchaTextBox"/>
       <button type="submit">Submit</button>
     </form>
+    <span style="font-size: 400px; font-weight: 900; color: white;">1001101</span>
   </body>
   <script src="script2.js"></script>
 </html>
