--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <input type="text" placeholder="Captcha" id="cpatchaTextBox"/>
       <button type="submit">Submit</button>
     </form>
+    <span style="font-size: 400px; font-weight: 900; color: white;">1001101</span>
   </body>
   <script src="script.js"></script>
 </html>
